--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Shaik Rehanuddin. It uses data from mapbox.com and weatherstack.com!!!</p>
         <img class="portrait" src="https://www.iamrehan.me/assets/img/full-img.jpg">
     </div>
 
